# hate.fun

./: .gitignore  AUDIT-GROK.md  AUDIT-gpt-5-codex.md  BUG_FIX_SUMMARY.md  Cargo.toml  INTEGRATION_TESTS.md  KANI.md  NATIVE-TESTING.md  QUICKSTART.md  README.md  REFACTORING-FOR-VERIFICATION.md  SECURITY.md  TESTING.md  TEST_RESULTS.md  claude.md  spell.md  todo.md
.github/workflows/: kani-verify.yml  test-all.yml
scripts/: build-native.sh  build.sh  deploy-native.sh  setup-native.sh  start-validator.sh  stop-validator.sh  test-native.sh  verify-kani.sh
src/: error.rs  lib.rs  state.rs  system_program.rs  verification.rs
src/instructions/: claim_payout.rs  close_bucket.rs  create_bucket.rs  deposit_to_escrow.rs  flush_escrow.rs  mod.rs
tests/: integration_client.rs  integration_test.rs
