[package]
name = "hate_fun"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []

[dependencies]
pinocchio = "0.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
solana-sdk = "2.0"
solana-client = "2.0"
solana-program = "2.0"
solana-rpc-client = "2.0"
rand = "0.8"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
